The PeerConnectionBackendClient interface is missing functionality to notify the implementing object that a new RTCRtpReceiver is available.
Created attachment 272008 [details] Proposed patch
Comment on attachment 272008 [details] Proposed patch Clearing flags on attachment: 272008 Committed r197019: <http://trac.webkit.org/changeset/197019>
All reviewed patches have been landed. Closing bug.