WebRTC: Add addReceiver() function to PeerConnectionBackendClient interface https://bugs.webkit.org/show_bug.cgi?id=154583

Reviewed by Eric Carlson.

The addRecevier() notifies the PeerConnectionBackendClient that a new RTCRtpReceiver,
representing an MediaStreamTrack received from a remote peer, is added.

* Modules/mediastream/PeerConnectionBackend.h:
* Modules/mediastream/RTCPeerConnection.cpp:
(WebCore::RTCPeerConnection::addReceiver):
* Modules/mediastream/RTCPeerConnection.h:


Canonical link: https://commits.webkit.org/172725@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@197019 268f45cc-cd09-0410-ab3c-d52691b4dbfc