Source/WebCore/Modules/mediastream/RTCPeerConnection.cpp
@@ -391,6 +391,11 @@ bool RTCPeerConnection::canSuspendForDocumentSuspension() const
     return false;
 }
 
+void RTCPeerConnection::addReceiver(RTCRtpReceiver& receiver)
+{
+    m_receiverSet.append(&receiver);
+}
+
 void RTCPeerConnection::setSignalingState(SignalingState newState)
 {
     m_signalingState = newState;
